--- a/iststyle.css
+++ b/iststyle.css
@@ -1,1 +1,30 @@
-/* --------------------------------------------------------	iststyle	made by: Bruno Monteiro (GAEL)	date: 24.11.2006---------------------------------------------------------*//* -- main stylesheet for modern browsers --*/@import url("main_r.css");	/* -- stylesheet for IE5win box model -- http://tantek.com/CSS/Examples/midpass.html -- */@media tty {i{content:"\";/*" "*/}}; @import 'main_ie5win.css'; {;}/*";}}/* */@media tty {i{content:"\";/*" "*/}}@m; @import 'main_ie5win.css'; /*";}}/* */
+/* --------------------------------------------------------
+	iststyle
+	made by: Bruno Monteiro (GAEL)
+	date: 24.11.2006
+---------------------------------------------------------*/
+
+/* -- main stylesheet for modern browsers --*/
+
+@import url("main_r.css");
+	
+/* -- stylesheet for IE5win box model -- http://tantek.com/CSS/Examples/midpass.html -- */
+
+
+@media tty {
+i{content:"\";/*" "*/}}; @import 'main_ie5win.css'; {;}/*";}
+}/* */
+
+
+@media tty {
+i{content:"\";/*" "*/}}@m; @import 'main_ie5win.css'; /*";}
+}/* */
+
+.circular {
+	width: 300px;
+	height: 300px;
+	border-radius: 150px;
+	-webkit-border-radius: 150px;
+	-moz-border-radius: 150px;
+	background: url(my-photo.jpg) no-repeat;
+}
